tests/syntax_error/self_as_varname.jou
def foo() -> void:
    self = 1  # Error: asd
